# CuLibLinearAlg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: bench_main.cpp
examples/: example_basic.cpp
include/linalg/: backend.hpp  matrix.hpp  ops.hpp
src/: matrix.cpp  ops_cpu.cpp
tests/: test_main.cpp
